--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -4,20 +4,33 @@
 @reference "tailwindcss";
 
 :root {
+    --navbar-height: 3.8rem;
+    --content-min-width: 300px;
+    --content-max-width: 576px;
 }
 
 @layer components {
     .btn {
-        @apply px-4 py-2 rounded font-semibold text-sm bg-slate-600 shadow-sm text-white
+        @apply px-4 py-2 rounded font-semibold text-sm bg-slate-600 shadow-sm text-white;
     }
-    .input-field{
-        @apply w-full border-2 rounded border-b-slate-400
+
+    .input-field {
+        @apply w-full border-2 rounded border-slate-400;
     }
+
     .fieldset {
-        @apply p-3 border-2 border-solid border-slate-300
+        @apply p-3 border-2 border-solid border-slate-300;
     }
 
     .btn-disabled {
-        @apply bg-slate-300 cursor-not-allowed
+        @apply bg-slate-300 cursor-not-allowed;
+    }
+
+    .navbar-bg-color {
+        @apply bg-slate-600;
+    }
+
+    .navbar-border-color {
+        @apply border-slate-600;
     }
 }
