--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -11,7 +11,7 @@
 
 @layer components {
     .btn {
-        @apply px-4 py-2 rounded font-semibold text-sm bg-slate-600 shadow-sm text-white;
+        @apply px-4 py-2 rounded font-semibold text-sm text-white bg-slate-800 border border-slate-500 hover:bg-slate-500/40 active:bg-slate-500/60 cursor-pointer shadow-sm;
     }
 
     .input-field {
@@ -27,10 +27,10 @@
     }
 
     .navbar-bg-color {
-        @apply bg-slate-600;
+        @apply bg-slate-800;
     }
 
     .navbar-border-color {
-        @apply border-slate-300;
+        @apply border-slate-500;
     }
 }
