--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -33,4 +33,8 @@
     .navbar-border-color {
         @apply border-slate-500;
     }
+
+    .err-text-color {
+        @apply text-red-700;
+    }
 }
