--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -1,44 +1,41 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@reference "tailwindcss";
+@import "tailwindcss";
 
 :root {
-    --navbar-height: 3.8rem;
-    --content-min-width: 300px;
-    --content-max-width: 576px;
+  --navbar-height: 3.8rem;
+  --content-min-width: 300px;
+  --content-max-width: 576px;
 }
 
 @layer components {
-    .actionbar-icon {
-        @apply w-8 h-8;
-    }
+  .actionbar-icon {
+    @apply w-8 h-8;
+  }
 
-    .btn {
-        @apply px-4 py-2 rounded font-semibold text-sm text-white bg-slate-800 border border-slate-500 hover:bg-slate-500/40 active:bg-slate-500/60 cursor-pointer shadow-sm;
-    }
+  .btn {
+    @apply px-4 py-2 rounded font-semibold text-sm bg-slate-600 shadow-sm text-white;
+  }
 
-    .input-field {
-        @apply w-full border-2 rounded border-slate-400;
-    }
+  .input-field {
+    @apply w-full border-2 rounded border-slate-400;
+  }
 
-    .fieldset {
-        @apply p-3 border-2 border-solid border-slate-300;
-    }
+  .fieldset {
+    @apply p-3 border-2 border-solid border-slate-300;
+  }
 
-    .btn-disabled {
-        @apply bg-slate-300 cursor-not-allowed;
-    }
+  .btn-disabled {
+    @apply bg-slate-300 cursor-not-allowed;
+  }
 
-    .navbar-bg-color {
-        @apply bg-slate-800;
-    }
+  .navbar-bg-color {
+    @apply bg-slate-600;
+  }
 
-    .navbar-border-color {
-        @apply border-slate-500;
-    }
+  .navbar-border-color {
+    @apply border-slate-300;
+  }
 
-    .err-text-color {
-        @apply text-red-700;
-    }
+  .err-text-color {
+    @apply text-red-700;
+  }
 }
