--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -1,9 +1,14 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@reference "tailwindcss";
 
 :root {
+  --appbar-height: 3.5rem;
   --navbar-height: 3.8rem;
   --content-min-width: 300px;
   --content-max-width: 576px;
+  --sidebar-width: 250px;
 }
 
 @layer components {
@@ -37,5 +42,25 @@
 
   .err-text-color {
     @apply text-red-700;
+  }
+
+  .profile-portrait {
+    @apply object-cover rounded-md w-14 h-14;
+  }
+
+  .profile-portrait-lg {
+    @apply object-cover rounded-md w-28 h-28;
+  }
+
+  .fieldset {
+    @apply p-3 border-2 border-solid border-slate-300;
+  }
+
+  .sidebar-navlink {
+    @apply cursor-pointer px-3 py-5 block transition duration-300 text-white border-b border-slate-500;
+  }
+
+  .link {
+    @apply cursor-pointer text-blue-600 underline;
   }
 }
